feat: wip - save principal